# haegeum

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ai_commander/lib/ai_commander/: ai_commander
install/ai_commander/share/ai_commander/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bringup/share/bringup/: package.ps1  package.sh  package.xml
install/cloud_logger/share/cloud_logger/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cop_manager/share/cop_manager/: package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
log/: latest_build
src/ai_commander/: setup.cfg  setup.py
src/ai_commander/ai_commander/: ai_commander.py  allocator.py  battle_manager.py  decision_engine.py  robot_manager.py  target_manager.py
src/bringup/: setup.py
src/cloud_logger/: setup.cfg  setup.py
src/cop_manager/: setup.cfg  setup.py
src/haegeum_interfaces/: CMakeLists.txt
src/haegeum_interfaces/msg/: BattlefieldState.msg  Event.msg  Target.msg  TargetDetected.msg
src/mission_manager/: CMakeLists.txt  package.xml
src/target_fusion/: setup.cfg  setup.py
src/target_generator/: package.xml  setup.cfg  setup.py
src/target_generator/target_generator/: target_generator.py
src/task_allocator/: setup.cfg  setup.py
src/threat_assessment/: package.xml  setup.cfg  setup.py
src/uav_agent/: setup.cfg  setup.py
src/uav_agent/uav_agent/: uav_agent.py
src/ugv_agent/: package.xml  setup.cfg  setup.py
src/ugv_agent/ugv_agent/: ugv_agent.py
(+101 files in other folders)
